# rust_unit_of_work

./: Cargo.toml  docker-compose.yml  example.env  readme.md  rust-toolchain.toml
abstract_db_access/: Cargo.toml
abstract_db_access/examples/: dbschema.sql  pg_deadpool.rs  sqlx.rs
abstract_db_access/src/: lib.rs  pg_deadpool.rs  pg_tokio.rs  sqlx.rs
script/: test-all.sh
src/: app.rs  config.rs  domain.rs  main.rs
src/app/: usecase.rs
src/config/: connection.rs
src/domain/: base.rs  mod.rs  repositories.rs
src/domain/entities/: mod.rs
src/domain/types/: mod.rs
src/infra/: database.rs  mod.rs  repositories.rs  sql.rs  table.rs
src/infra/database/: conversion.rs
utilities/: Cargo.toml
utilities/src/: lib.rs
