[package]
name = "utilities"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "utilities"
path = "src/lib.rs"

[dependencies]
tokio-postgres = { version = "0.7.7", features = ["with-uuid-1"] }
tokio-postgres-rustls = { version = "0.9.0" }
deadpool-postgres = { version = "0.10.3" }
bb8-postgres = { version = "0.8.1" }

rustls = { version = "0.20.7" }
webpki-roots = { version = "0.22.5" }
